<?xml version="1.0"?>
<package format="2">
  <name>lenny_calibration</name>
  <version>0.0.0</version>
  <description>The lenny_calibration package</description>

  <author email="fsuarez6@gmail.com">Francisco Suarez-Ruiz</author>
  <maintainer email="fsuarez6@gmail.com">Francisco Suarez-Ruiz</maintainer>
  <license>BSD 3-Clause</license>
  <url type="repository">https://github.com/fsuarez6/lenny</url>
  <url type="bugtracker">https://github.com/fsuarez6/lenny/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>

  <exec_depend>aruco_ros</exec_depend>
  <exec_depend>baldor</exec_depend>
  <exec_depend>criutils</exec_depend>
  <exec_depend>handeye</exec_depend>
  <exec_depend>rqt_service_caller</exec_depend>
  <exec_depend>resource_retriever</exec_depend>
  <exec_depend>std_srvs</exec_depend>

</package>
