<?xml version="1.0"?>
<package format="2">
  <name>lenny_control</name>
  <version>0.0.0</version>
  <description>The lenny_control package</description>

  <author email="fsuarez6@gmail.com">Francisco Suarez-Ruiz</author>
  <maintainer email="fsuarez6@gmail.com">Francisco Suarez-Ruiz</maintainer>
  <license>BSD 3-Clause</license>
  <url type="repository">https://github.com/fsuarez6/lenny</url>
  <url type="bugtracker">https://github.com/fsuarez6/lenny/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>control_toolbox</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>transmission_interface</exec_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>

</package>
