<?xml version="1.0"?>
<package format="2">
  <name>lenny_msgs</name>
  <version>0.0.0</version>
  <description>The lenny_msgs package</description>

  <author email="fsuarez6@gmail.com">Francisco Suarez-Ruiz</author>
  <maintainer email="fsuarez6@gmail.com">Francisco Suarez-Ruiz</maintainer>
  <license>BSD 3-Clause</license>
  <url type="repository">https://github.com/fsuarez6/lenny</url>
  <url type="bugtracker">https://github.com/fsuarez6/lenny/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
